--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,13 +42,13 @@ jobs:
 
     - name: Deploy
       run: |
-        git config --global user.name $user_name
-        git config --global user.email $user_email
-        git remote set-url origin https://${github_token}@github.com/${repository}
+        git config --global user.name "${{ env.user_name }}"
+        git config --global user.email "${{ env.user_email }}"
+        git remote set-url origin https://${{ env.github_token }}@github.com/${{ env.repository }}
         npm run deploy
       env:
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
-        github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-        repository: ${{ github.repository }}
+        user_name: 'github-actions[bot]'  # GitHub Actions bot name for commits
+        user_email: 'github-actions[bot]@users.noreply.github.com'  # GitHub Actions bot email
+        github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}  # personal access token stored as a secret
+        repository: ${{ github.repository }}  # GitHub repository context
 
