--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,53 @@
-name: CI
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-on: [push]
+
+name: CI/CD
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
-    runs-on: windows-latest
-    
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Install dependencies
+      run: npm install
+      
+    - name: Run the tests and generate coverage report
+      run: npm test -- --coverage
+      
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      
+    - name: Build
+      run: npm run build
+
+    - name: Deploy
+      run: |
+        git config --global user.name "${{ env.user_name }}"
+        git config --global user.email "${{ env.user_email }}"
+        git remote set-url origin https://${{ env.github_token }}@github.com/${{ env.repository }}
+        npm run deploy
+      env:
+        user_name: 'github-actions[bot]'  # GitHub Actions bot name for commits
+        user_email: 'github-actions[bot]@users.noreply.github.com'  # GitHub Actions bot email
+        github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}  # personal access token stored as a secret
+        repository: ${{ github.repository }}  # GitHub repository context
